--- a/JC/JC/index.html
+++ b/JC/JC/index.html
@@ -25,7 +25,7 @@
         <div class="navbar navbar-dark bg-dark" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Peliculas</a>
-                <a class="nav-item nav-link" href="#">Sobre Nosotros</a>
+                <a class="nav-item nav-link" href="sobrenosotros.html">Sobre Nosotros</a>
             </div>
         </div>
     </nav>
@@ -82,49 +82,6 @@
       </a>
     </div>
   </div>
-  
-      
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col-2">#</th>
-                <th scope="col-2">Nombre</th>
-                <th scope="col-2">Apellido</th>
-                <th scope="col-2">Usuario</th>
-                <th scope="col-4">Foto</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Iñigo</td>
-                <td>Zuriaga</td>
-                <td>@tonto</td>
-                <td><img src="img/inigo.png" alt="perfilInigo" class="col-2"></td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Pablo</td>
-                <td>Horcajada</td>
-                <td>@pinto</td>
-                <td><img src="img/pablo.jpg" alt="perfilPablo" class="col-2"></td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Pablo</td>
-                <td>Bejar</td>
-                <td>@lux</td>
-                <td><img src="img/pabloB.jpg" alt="perfilPabloB" class="col-2"></td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Sergio</td>
-                <td>Díaz</td>
-                <td>@karamba</td>
-                <td><img src="img/sergio.jpg" alt="perfilSergio" class="col-2"></td>
-            </tr>
-        </tbody>
-    </table>
 </body>
 
 </html>
