Este es el producto de neustro trabjao AMIGO

--- a/JC/JC/sobrenosotros.html
+++ b/JC/JC/sobrenosotros.html
@@ -32,7 +32,7 @@
                     <tr>
                         <td class="col-2 col-sm-2"><img src="img/inigo.png" alt="perfilInigo"
                                 class="img-fluid imagenesSobre rounded"></td>
-                        <td scope="row">Iñigo</td>
+                        <td>Iñigo</td>
                         <td>Zuriaga</td>
                         <td>@tonto</td>
                     </tr>
