--- a/JC/JC/home.html
+++ b/JC/JC/home.html
@@ -101,33 +101,31 @@
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/caramba.jpg" alt="Los Angeles" style="width:100%;">
+          <img src="img/grabacion.jpg" class="d-block" alt="Los Angeles" style="width:100%;">
           <div class="carousel-caption">
-            <h3>Los Angeles</h3>
-            <p>LA is always so much fun!</p>
+            <h3>Estudio de grabación</h3>
+            <p>Aquí fue donde hicimos el rodaje</p>
           </div>
         </div>
         <div class="item">
-          <img src="img/pabloB.jpg" alt="Chicago" style="width:100%;">
+          <img src="img/crash.jpg" alt="Chicago" class="d-block" style="width:100%;">
           <div class="carousel-caption">
-            <h3>Chicago</h3>
-            <p>Thank you, Chicago!</p>
+            <h3>Inigo Zuriaga</h3>
+            <p>Entrevista al carismático empleado de Fresh Films Productions</p>
           </div>
         </div>
-      
-        <div class="item">
-          <img src="img/sergio.jpg" alt="New York" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>New York</h3>
-            <p>We love the Big Apple!</p>
+          <div class="item">
+              <img src="img/programacion.jpg" alt="Chicago" class="d-block" style="width:100%;">
+              <div class="carousel-caption">
+                  <h3>Página realizada con Boostrap</h3>
+                  <p>Esta página ha sido desarrollada en boostrap</p>
+              </div>
           </div>
-        </div>
-    
       </div>
   
       <!-- Left and right controls -->
